vlib/v/checker/tests/wrong_predicate_type_err.vv
@[heap]
struct Foo {
	field int
}

fn t() []&Foo {
	mut a := []&Foo{}
	a << &Foo{
		field: 1
	}
	a << &Foo{
		field: 2
	}
	return a
}

fn main() {
	t().filter(fn (a Foo) bool {
		return true
	})
}
